feat : 체크박스 제거및 수정

--- a/html/mypage/detailedReservation.html
+++ b/html/mypage/detailedReservation.html
@@ -18,7 +18,7 @@
       >
         <div>보관함</div>
         <div>/</div>
-        <div>결제내역</div>
+        <div>상세 예약현황</div>
       </section>
       <!-- 2.헤더 설명 -->
       <section
@@ -35,10 +35,13 @@
         <label for="detailReservation-search-bar"
           ><img src="" alt="목록"
         /></label>
-        <input type="search" class="search-bar" id="myPayment-search-bar" />
+        <input
+          type="search"
+          class="search-bar"
+          id="detailReservation-search-bar"
+        />
         <button id="List-searh-button">Search</button>
       </section>
-      <div class="v1-line"></div>
       <!-- 4.필터  -->
       <section
         class="detailReservation-dropdown"
@@ -56,16 +59,132 @@
       <!--5. 상세 예약 현황  -->
       <section class="detailReservation-list" id="detailedReservation-section5">
         <div class="hd__inner900">
-          <div class="Card">
-            <img src="" alt="업체 이미지" />
-            <h3>S스튜디오</h3>
-            <p>서울 특별시 서초구 신반포로41길 7</p>
+          <div class="Card-List">
+            <div class="Card">
+              <img
+                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+                alt="업체 이미지"
+              />
+              <h3>S스튜디오</h3>
+              <p><b>주소:</b> 서울 특별시 서초구 신반포로41길 7</p>
+              <br />
+            </div>
+            <div class="Card">
+              <img
+                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+                alt="업체 이미지"
+              />
+              <h3>S스튜디오</h3>
+              <p>서울 특별시 서초구 신반포로41길 7</p>
+            </div>
+            <div class="Card">
+              <img
+                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+                alt="업체 이미지"
+              />
+              <h3>S스튜디오</h3>
+              <p>서울 특별시 서초구 신반포로41길 7</p>
+            </div>
+            <div class="Card">
+              <img
+                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+                alt="업체 이미지"
+              />
+              <h3>S스튜디오</h3>
+              <p>서울 특별시 서초구 신반포로41길 7</p>
+            </div>
+            <div class="Card">
+              <img
+                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+                alt="업체 이미지"
+              />
+              <h3>S스튜디오</h3>
+              <p>서울 특별시 서초구 신반포로41길 7</p>
+            </div>
+            <div class="Card">
+              <img
+                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+                alt="업체 이미지"
+              />
+              <h3>S스튜디오</h3>
+              <p>서울 특별시 서초구 신반포로41길 7</p>
+            </div>
+            <div class="Card">
+              <img
+                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+                alt="업체 이미지"
+              />
+              <h3>S스튜디오</h3>
+              <p>서울 특별시 서초구 신반포로41길 7</p>
+            </div>
+            <div class="Card">
+              <img
+                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+                alt="업체 이미지"
+              />
+              <h3>S스튜디오</h3>
+              <p>서울 특별시 서초구 신반포로41길 7</p>
+            </div>
+            <div class="Card">
+              <img
+                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+                alt="업체 이미지"
+              />
+              <h3>S스튜디오</h3>
+              <p>서울 특별시 서초구 신반포로41길 7</p>
+            </div>
           </div>
         </div>
       </section>
       <!-- 6. 클릭한 상세 예약 내용(모달창) -->
-
-      <!-- 7.페이지네이션 -->
+      <section
+        class="detailReservation-modal"
+        id="detailedReservation-section6"
+      >
+        <div class="modal">
+          <div class="modal_body">
+            <div class="modal-header">
+              <div class="title">
+                <h2>상세 예약 현황</h2>
+              </div>
+              <div class="close-area">X</div>
+            </div>
+            <div class="Content">
+              <img
+                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+                alt="스튜디오 이미지"
+              />
+              <div>
+                <div>
+                  <p>브랜드명:</p>
+                  <p>S스튜디오</p>
+                </div>
+                <div>
+                  <p>예약 날짜:</p>
+                  <p>2024-07-01</p>
+                </div>
+                <div>
+                  <p>예약 시간:</p>
+                  <p>11:00~12:00</p>
+                </div>
+                <div>
+                  <p>홈페이지:</p>
+                  <a href="#">https://www.Sstudio.com</a>
+                </div>
+                <div>
+                  <p>주소:</p>
+                  <p>서울특별시 서초구 신반포로41길</p>
+                </div>
+                <div>
+                  <p>담당자 이름:</p>
+                  <p>김지원</p>
+                </div>
+              </div>
+            </div>
+            <br />
+          </div>
+        </div>
+      </section>
     </div>
   </body>
   <div id="footer-placeholder"></div>
