--- a/html/login/passwordJoin.html
+++ b/html/login/passwordJoin.html
@@ -19,21 +19,21 @@
         <br />
         <div class ="Passwordset">
             <div class = "pass">
-                <input type = "password" placeholder="비밀번호 입력" onfocus="placeholder='' "onblur="placeholder='비밀번호 입력'" minlength="8" maxlength="20" class="passSet" />
-                <img src = "Image/캡처-removebg-preview.png" class="btn">
+                <input type = "password" placeholder="비밀번호 입력" onfocus="placeholder='' "onblur="placeholder='비밀번호 입력'" minlength="8" maxlength="20" class="passSet1" />
+                <!-- <img src = "Image/캡처-removebg-preview.png" class="btn"> -->
             </div>
             <br />
             <div class="check">
-                 <label for="upper">대문자</label><input type ="checkbox" id ="upper" disabled checked/>
-                 <label for="small">소문자</label><input type ="checkbox" id ="small" disabled checked/>
+                 <label for="upper">대소문자</label><input type ="checkbox" id ="upper" disabled checked/>
+                 <label for="num">숫자</label><input type ="checkbox" id ="small" disabled checked/>
                  <label for="special">특수문자</label><input type ="checkbox" id ="special" disabled checked/>
                  <label for="limit">8-20자 이내</label><input type ="checkbox" id ="limit" disabled checked/>
-                 <label >&nbsp;</label>
+                 <label>&nbsp;</label>
                  <br/>
             </div>           
             <br>
             <div class = "pass">
-            <input type = "password" placeholder="비밀번호 확인" onfocus="placeholder='' "onblur="placeholder='비밀번호 확인'" class="passSet" />
+            <input type = "password" placeholder="비밀번호 확인" onfocus="placeholder='' "onblur="placeholder='비밀번호 확인'" class="passSet2" />
             <img src = "Image/캡처-removebg-preview.png" class="btn">
             </div>
             <br />
@@ -53,6 +53,6 @@
     </div>
 
     
-
+    <script defer src="../../js/login/passwordJoin.js"></script>
 </body>
 </html>
