--- a/html/weddingHall/weddingHallPayment.html
+++ b/html/weddingHall/weddingHallPayment.html
@@ -146,12 +146,120 @@
             <section></section>
 
             <!-- 3. 결제 -->
-            <section class="paymanet">
-                <div class="payment-method"></div>
-                <div class="cost"></div>
+            <!-- 결제 -->
+            <section class="payment">
+                <div class="payment-method">
+                    <div class="title">결제수단선택</div>
+                    <div class="option1">
+                        <button>신용카드</button>
+                        <button>실시간 계좌이체</button>
+                        <button>가상계좌</button>
+                    </div>
+                    <div class="option2">
+                        <button>
+                            <img
+                                src="../../assets/images/appstore.png"
+                                alt="N Pay"
+                            />
+                        </button>
+                        <button>
+                            <img
+                                src="../../assets/images/appstore.png"
+                                alt="Samsung Pay"
+                            />
+                        </button>
+                        <button>
+                            <img
+                                src="../../assets/images/appstore.png"
+                                alt="Pay"
+                            />
+                        </button>
+                        <button>
+                            <img
+                                src="../../assets/images/appstore.png"
+                                alt="Toss Pay"
+                            />
+                        </button>
+                        <button>
+                            <img
+                                src="../../assets/images/appstore.png"
+                                alt="Payco"
+                            />
+                        </button>
+                    </div>
+
+                    <div class="promotion">
+                        <h3>결제 프로모션</h3>
+                        <div class="promotion-summary">
+                            <span>하나카드</span>
+                            <span>무이자할부</span>
+                        </div>
+                        <div class="promotion-details">
+                            <h4>하나카드 최대 10만원 즉시할인</h4>
+                            <p>
+                                • 50만원/100만원/300만원/500만원 이상 구매시
+                                1/2/6/10만원 즉시할인
+                            </p>
+                            <p>• 기간: 8/1~8/31</p>
+                            <p>• 1QPAY 결제시에만 가능합니다.</p>
+                            <p>• 간편결제는 즉시할인 대상에서 제외됩니다.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cost">
+                    <div class="title">최종결제금액</div>
+                    <div class="cost-details">
+                        <div>
+                            <span>총 판매가</span>
+                            <span>70,000</span>
+                            <span>원</span>
+                        </div>
+                        <div>
+                            <span>판매가</span>
+                            <span>68,000</span>
+                            <span>원</span>
+                        </div>
+                    </div>
+                    <div class="cost-total">
+                        <h3>최종결제금액</h3>
+                        <div>276,000,000원</div>
+                    </div>
+                    <div class="agree-terms">
+                        <input type="checkbox" id="terms1" />
+                        <label for="terms1"
+                            >주문 내용을 확인했으며, 아래 내용에 모두
+                            동의합니다.</label
+                        ><br />
+                        <input type="checkbox" id="terms2" />
+                        <label for="terms2"
+                            >[필수] 개인정보 수집/이용 동의</label
+                        >
+                        <a href="#">보기</a><br />
+                        <input type="checkbox" id="terms3" />
+                        <label for="terms3"
+                            >[필수] 전자금융거래 이용 약관 동의</label
+                        >
+                        <a href="#">보기</a>
+                    </div>
+                    <div class="payment-button">
+                        <button>결제하기</button>
+                    </div>
+                </div>
+
+                <div class="card-use">
+                    <h4>신용카드 이용안내</h4>
+                    <p>
+                        • KB국민, BC, 우리카드는 ISP 어플리케이션이 필요합니다.
+                    </p>
+                    <p>
+                        • 30만원 이상, 사용가든 결제 시 공인인증서를 반드시
+                        사용하도록 정하고 있습니다.
+                    </p>
+                </div>
             </section>
         </div>
 
-        <!-- <div id="footer-placeholder"></div> -->
+        <div id="footer-placeholder"></div>
     </body>
 </html>
