feat : [FE] '전체 동의' 체크박스와 '개별' 체크박스 동기화 기능 추가

--- a/html/weddingHall/weddingHallPayment.html
+++ b/html/weddingHall/weddingHallPayment.html
@@ -10,6 +10,7 @@
             href="../../css/weddingHall/weddingHallPayment.css"
         />
         <script defer src="../../js/main/main.js"></script>
+        <script defer src="../../js/weddingHall/weddingHallPayment.js"></script>
     </head>
     <body>
         <div id="header-placeholder"></div>
