feat : [FE] 라디오 버튼 name 항목 추가

--- a/html/weddingHall/weddingHallPayment.html
+++ b/html/weddingHall/weddingHallPayment.html
@@ -29,16 +29,16 @@
                     <h2>본인</h2>
                     <div class="choose">
                         <div>
-                            <input type="radio" name="bride" />
-                            <label for="bride">신부</label>
+                            <input type="radio" id="self-bride" name="self" />
+                            <label for="self-bride">신부</label>
                         </div>
                         <div>
-                            <input type="radio" name="groom" />
-                            <label for="groom">신랑</label>
+                            <input type="radio" id="self-groom" name="self" />
+                            <label for="self-groom">신랑</label>
                         </div>
                         <div>
-                            <input type="radio" name="family" />
-                            <label for="family">가족</label>
+                            <input type="radio" id="self-family" name="self" />
+                            <label for="self-family">가족</label>
                         </div>
                     </div>
                     <table class="user-table">
@@ -81,16 +81,28 @@
                     <h2>배우자</h2>
                     <div class="choose">
                         <div>
-                            <input type="radio" name="bride" />
-                            <label for="bride">신부</label>
+                            <input
+                                type="radio"
+                                id="partner-bride"
+                                name="partner"
+                            />
+                            <label for="partner-bride">신부</label>
                         </div>
                         <div>
-                            <input type="radio" name="groom" />
-                            <label for="groom">신랑</label>
+                            <input
+                                type="radio"
+                                id="partner-groom"
+                                name="partner"
+                            />
+                            <label for="partner-groom">신랑</label>
                         </div>
                         <div>
-                            <input type="radio" name="family" />
-                            <label for="family">가족</label>
+                            <input
+                                type="radio"
+                                id="partner-family"
+                                name="partner"
+                            />
+                            <label for="partner-family">가족</label>
                         </div>
                     </div>
                     <table class="user-table">
