--- a/html/admin/customerDetail.html
+++ b/html/admin/customerDetail.html
@@ -15,7 +15,6 @@
     </head>
     <body>
         <header id="header-placeholder"></header>
-
         <div class="admin-container hd__inner1100">
             <aside class="admin-sidebar">
                 <div id="admin-sidebar-placeholder"></div>
@@ -43,7 +42,7 @@
                     </div>
                 </section>
 
-                <!-- 2. 고객 정보  + step 섹션 -->
+                <!-- 2. 고객 정보 + step 섹션 -->
                 <section class="user-info">
                     <div class="user-info-container">
                         <div class="user-info-inner">
@@ -81,33 +80,13 @@
                     </div>
                 </section>
 
-                <!-- 3. 웨딩홀 방문 예약 일정 -->
-                <section class="customer-management visit-schedule">
-                    <h2>고객 예약 관리</h2>
-                    <p class="customer-management-info">
-                        ✔️ 날짜, 예약자명 전화번호를 통해 1년 간의 예약 현황을
-                        확인할 수 있습니다.
-                    </p>
-
-                    <!-- 2-1. 고객 검색 -->
-                    <section class="customer-search">
-                        <div class="calendar">
-                            <span>선택한 날짜가 표시됩니다.</span>
-                            <img src="../../assets/images/calendar-color.png" />
-                        </div>
-                        <div class="name-phone">
-                            <span>예약자명, 전화번호를 입력해주세요</span>
-                            <img
-                                src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/search-icon.png"
-                            />
-                        </div>
-                    </section>
-
-                    <!-- 2-2. 방문 고객 리스트 -->
+                <!-- 3. 웨딩홀 방문 일정 -->
+                <section class="visit-schedule">
+                    <h2>방문 예약 일정</h2>
                     <div class="visit-detail-container">
                         <div class="visit-details">
                             <div class="visit-time">
-                                <div>하우스홀</div>
+                                <div>2024-07-17</div>
                                 <div class="visit-true">12:00</div>
                             </div>
                             <div class="visit-customer-info">
@@ -146,39 +125,6 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="visit-details">
-                            <div class="visit-time">
-                                <div>채플홀</div>
-                                <div class="visit-false">12:00</div>
-                            </div>
-                            <div class="visit-customer-info">
-                                <div class="customer-1">
-                                    👰🏻‍♀️ <span class="name">사임당</span>
-                                    <span class="phone">010-1224-5678</span>
-                                </div>
-                                <div class="customer-2">
-                                    🤵🏻 <span class="name">이순신</span>
-                                    <span class="phone">010-2222-2222</span>
-                                </div>
-                                <div class="payment-email-false">
-                                    결제 안내 메일 미발송
-                                </div>
-                            </div>
-                            <div class="wedding-info">
-                                <div>
-                                    <span>예상 하객수</span>
-                                    <span>200명 ~ 300명</span>
-                                </div>
-                                <div>
-                                    <span>희망 예식일</span>
-                                    <span>2024-11-23 토요일</span>
-                                </div>
-                                <div class="message">
-                                    <span>전달 사항</span>
-                                    <p class="message-summary">없음</p>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </section>
 
@@ -186,28 +132,27 @@
                 <section class="payment-status">
                     <div class="payment-header">
                         <div>
-                        <h2>결제 현황</h2>
+                            <h2>결제 현황</h2>
+                            <p>
+                                '식사비'는 당일 결제 가능하며 이외 모든 잔금은
+                                본식 2주전까지 결제가 완료되어야 합니다.
+                            </p>
+                        </div>
 
-                        <p>
-                            '식사비'는 당일 결제 가능하며 이외 모든 잔금은 본식
-                            2주전까지 결제가 완료되어야 합니다.
-                        </div>                    
-                        </p>
                         <div class="btns">
-                        <button class="quote-button">견적서 보기</button>
-                        <button class="email-button">결제 안내 이메일 발송</button>
+                            <button class="quote-button">견적서 보기</button>
+                            <button class="email-button">
+                                결제 안내 이메일 발송
+                            </button>
+                        </div>
                     </div>
-
-                    </div>
-                <div class="payment-body">
-<div class="payment-status">
-    <div>결제 날짜</div>
-    <div class="payment-status-not">결제 대기</div>
-</div>
-               
+                    <div class="payment-body">
+                        <div class="payment-status">
+                            <div>결제 날짜</div>
+                            <div class="payment-status-not">결제 대기</div>
+                        </div>
                         <table class="payment-table">
                             <thead>
-                            
                                 <tr>
                                     <th>구분</th>
                                     <th>금액</th>
@@ -243,7 +188,6 @@
                             </tbody>
                         </table>
                     </div>
-                    </div>
                 </section>
 
                 <!-- 5. 예식(본식) 정보 -->
@@ -256,11 +200,11 @@
                         />
                         <div class="wedding-info">
                             <div>예도홀</div>
-                            <div>
+                            <div class="date">
                                 <div>본식날짜</div>
                                 <span>2025 - 11 - 17 (일)</span>
                             </div>
-                            <div>
+                            <div class="time">
                                 <div>본식시간</div>
                                 <span>14:00</span>
                             </div>
