feat : [FE] 견적서 모달창 추가

--- a/html/admin/customerDetail.html
+++ b/html/admin/customerDetail.html
@@ -140,7 +140,10 @@
                         </div>
 
                         <div class="btns">
-                            <button class="quote-button">견적서 보기</button>
+                            <button class="quote-button" id="quote-link">
+                                견적서 보기
+                            </button>
+                            <div id="modal-container"></div>
                             <button class="email-button">
                                 결제 안내 이메일 발송
                             </button>
