style : [FE] 견적서 모달창 스타일 수정

--- a/html/weddingHall/mapViewWithFilters.html
+++ b/html/weddingHall/mapViewWithFilters.html
@@ -131,10 +131,13 @@
                                 <h2>자연 채광 아래 여유롭고 프라이빗한 예식</h2>
                             </div>
                             <div class="slide-item-img">
-                                <img
-                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall1.jpg"
-                                    alt="웨딩홀 이미지 5"
-                                />
+                                <a
+                                    href="../../html/weddingHall/weddingHallDetail.html"
+                                >
+                                    <img
+                                        src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall1.jpg"
+                                        alt="웨딩홀 이미지 5"
+                                /></a>
                             </div>
                             <div class="slide-item-content">
                                 <h3>추천포인트</h3>
