--- a/html/admin/adminMain.html
+++ b/html/admin/adminMain.html
@@ -51,7 +51,9 @@
                             💡 웨딩홀 신규 방문 예약 <span>2</span
                             ><span>건</span>있습니다.
                         </p>
-                        <a href="#">예약관리 바로가기 >>></a>
+                        <a href="../admin/customerList.html"
+                            >예약관리 바로가기 >>></a
+                        >
                     </div>
                     <table>
                         <thead>
@@ -86,7 +88,9 @@
                         <p>
                             ✅ 오늘 웨딩홀 방문 일정 <span>3</span>건 있습니다.
                         </p>
-                        <a href="#">예약관리 바로가기 >></a>
+                        <a href="../admin/customerList.html"
+                            >예약관리 바로가기 >>></a
+                        >
                     </div>
                     <div class="visit-detail-container">
                         <div class="visit-details">
