--- a/html/admin/customerList.html
+++ b/html/admin/customerList.html
@@ -67,47 +67,49 @@
 
                     <!-- 2-2. 방문 고객 리스트 -->
                     <div class="visit-detail-container">
-                        <div class="visit-details">
-                            <div class="visit-time">
-                                <div>하우스홀</div>
-                                <div class="visit-true">12:00</div>
+                        <a href="../admin/customerDetail.html">
+                            <div class="visit-details">
+                                <div class="visit-time">
+                                    <div>하우스홀</div>
+                                    <div class="visit-true">12:00</div>
+                                </div>
+                                <div class="visit-customer-info">
+                                    <div class="customer-1">
+                                        👰🏻‍♀️ <span class="name">박혜원</span>
+                                        <span class="phone">010-9917-5026</span>
+                                    </div>
+                                    <div class="customer-2">
+                                        🤵🏻 <span class="name">이정원</span>
+                                        <span class="phone">010-5454-9395</span>
+                                    </div>
+                                    <div class="payment-email-true">
+                                        결제 안내 메일 발송 완료
+                                    </div>
+                                </div>
+                                <div class="wedding-info">
+                                    <div>
+                                        <span>예상 하객수</span>
+                                        <span>200명 ~ 300명</span>
+                                    </div>
+                                    <div>
+                                        <span>희망 예식일</span>
+                                        <span>2024-11-23 토요일</span>
+                                    </div>
+                                    <div class="message">
+                                        <span>전달 사항</span>
+                                        <p class="message-summary">
+                                            2024년 10월 15일 오후 2시에 예식을
+                                            진행하고자 합니다. 예상 인원은 250명
+                                            정도이며, 예산은 3000만원 내외로
+                                            생각하고 있습니다. 특별히 꽃장식과
+                                            사진 촬영을 부탁드리고 싶습니다.
+                                            예약 가능 여부와 세부사항, 추가 비용
+                                            등에 대해 상담하고 싶습니다.
+                                        </p>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="visit-customer-info">
-                                <div class="customer-1">
-                                    👰🏻‍♀️ <span class="name">박혜원</span>
-                                    <span class="phone">010-9917-5026</span>
-                                </div>
-                                <div class="customer-2">
-                                    🤵🏻 <span class="name">이정원</span>
-                                    <span class="phone">010-5454-9395</span>
-                                </div>
-                                <div class="payment-email-true">
-                                    결제 안내 메일 발송 완료
-                                </div>
-                            </div>
-                            <div class="wedding-info">
-                                <div>
-                                    <span>예상 하객수</span>
-                                    <span>200명 ~ 300명</span>
-                                </div>
-                                <div>
-                                    <span>희망 예식일</span>
-                                    <span>2024-11-23 토요일</span>
-                                </div>
-                                <div class="message">
-                                    <span>전달 사항</span>
-                                    <p class="message-summary">
-                                        2024년 10월 15일 오후 2시에 예식을
-                                        진행하고자 합니다. 예상 인원은 250명
-                                        정도이며, 예산은 3000만원 내외로
-                                        생각하고 있습니다. 특별히 꽃장식과 사진
-                                        촬영을 부탁드리고 싶습니다. 예약 가능
-                                        여부와 세부사항, 추가 비용 등에 대해
-                                        상담하고 싶습니다.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
+                        </a>
                         <div class="visit-details">
                             <div class="visit-time">
                                 <div>채플홀</div>
