feat : [FE] 스드메 예약 결제 페이지 1차 완성

--- a/html/reservation/reservationCategory.html
+++ b/html/reservation/reservationCategory.html
@@ -30,7 +30,7 @@
             <!-- 안내 멘트 -->
             <section class="guide">
                 <div class="guide-step">Step.1</div>
-                <div class="guide-addition">
+                <div class="guide-explain">
                     예약을 원하는 카테고리를 선택해 주세요
                 </div>
             </section>
@@ -65,7 +65,7 @@
 
         <!-- 다음 단계 버튼 -->
         <section class="btn">
-            <button class="btn-nxt">다음 단계로</button>
+            <button class="btn-nxt"><a href="../../html/reservation/reservationSelectCompany.html">다음 단계로</a></button>
         </section>   
     </div>
     <div id="footer-placeholder"></div>
