--- a/html/visitReservation/visitReserveInfo.html
+++ b/html/visitReservation/visitReserveInfo.html
@@ -74,8 +74,8 @@
 
                     <!-- 버튼 -->
                     <section class="btn">
-                        <button class="btn-pre">이전</button>
-                        <button class="btn-nxt">예약 신청</button>
+                        <button class="btn-pre"><a href="../../html/visitReservation/visitReserveExpectancy.html">이전</a></button>
+                        <button class="btn-nxt"><a href="">예약 신청</a></button>
                     </section>
                 </div>
 
