feat : [FE] 패키지 최종견적서 완성

--- a/html/estimate/estimateCal.html
+++ b/html/estimate/estimateCal.html
@@ -51,9 +51,119 @@
                         <a href="#" class="link">업체 보러가기 >></a>
                     </div>
                 </div>
-                <div class="item highlight">
+                <div class="item">
                     <div class="image">
                         <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png" alt="Wedding Photo" width="100">
+                    </div>
+                    <div class="details">
+                        <div class="title">S 스튜디오</div>
+                        <div class="address">서울특별시 서초구 신반포로 41길 7</div>
+                        <a href="#" class="link">업체 보러가기 >></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="image">
+                        <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-2.png" alt="Wedding Photo" width="100">
+                    </div>
+                    <div class="details">
+                        <div class="title">S 스튜디오</div>
+                        <div class="address">서울특별시 서초구 신반포로 41길 7</div>
+                        <a href="#" class="link">업체 보러가기 >></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="image">
+                        <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-2.png" alt="Wedding Photo" width="100">
+                    </div>
+                    <div class="details">
+                        <div class="title">S 스튜디오</div>
+                        <div class="address">서울특별시 서초구 신반포로 41길 7</div>
+                        <a href="#" class="link">업체 보러가기 >></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="image">
+                        <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-2.png" alt="Wedding Photo" width="100">
+                    </div>
+                    <div class="details">
+                        <div class="title">S 스튜디오</div>
+                        <div class="address">서울특별시 서초구 신반포로 41길 7</div>
+                        <a href="#" class="link">업체 보러가기 >></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="image">
+                        <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-2.png" alt="Wedding Photo" width="100">
+                    </div>
+                    <div class="details">
+                        <div class="title">S 스튜디오</div>
+                        <div class="address">서울특별시 서초구 신반포로 41길 7</div>
+                        <a href="#" class="link">업체 보러가기 >></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="image">
+                        <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-2.png" alt="Wedding Photo" width="100">
+                    </div>
+                    <div class="details">
+                        <div class="title">S 스튜디오</div>
+                        <div class="address">서울특별시 서초구 신반포로 41길 7</div>
+                        <a href="#" class="link">업체 보러가기 >></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="image">
+                        <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-2.png" alt="Wedding Photo" width="100">
+                    </div>
+                    <div class="details">
+                        <div class="title">S 스튜디오</div>
+                        <div class="address">서울특별시 서초구 신반포로 41길 7</div>
+                        <a href="#" class="link">업체 보러가기 >></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="image">
+                        <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-2.png" alt="Wedding Photo" width="100">
+                    </div>
+                    <div class="details">
+                        <div class="title">S 스튜디오</div>
+                        <div class="address">서울특별시 서초구 신반포로 41길 7</div>
+                        <a href="#" class="link">업체 보러가기 >></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="image">
+                        <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-2.png" alt="Wedding Photo" width="100">
+                    </div>
+                    <div class="details">
+                        <div class="title">S 스튜디오</div>
+                        <div class="address">서울특별시 서초구 신반포로 41길 7</div>
+                        <a href="#" class="link">업체 보러가기 >></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="image">
+                        <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-2.png" alt="Wedding Photo" width="100">
+                    </div>
+                    <div class="details">
+                        <div class="title">S 스튜디오</div>
+                        <div class="address">서울특별시 서초구 신반포로 41길 7</div>
+                        <a href="#" class="link">업체 보러가기 >></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="image">
+                        <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-2.png" alt="Wedding Photo" width="100">
+                    </div>
+                    <div class="details">
+                        <div class="title">S 스튜디오</div>
+                        <div class="address">서울특별시 서초구 신반포로 41길 7</div>
+                        <a href="#" class="link">업체 보러가기 >></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="image">
+                        <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-2.png" alt="Wedding Photo" width="100">
                     </div>
                     <div class="details">
                         <div class="title">S 스튜디오</div>
