chore : [FE] login.css 변경

--- a/html/login/login.html
+++ b/html/login/login.html
@@ -14,7 +14,7 @@
     <div class = "login-wrapper">
         <!--로그이미지-->
         <div class = "logo">
-            <a href="../../html/main/main.html"><img src="#"  id="Mylogo" /></a>
+            <a href="../../html/main/main.html" class="Wedder"><img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/wedder-logo2.png"  id="Mylogo" />Wedder</a>
         </div>
 
         <div>
