--- a/html/estimate/estimateCal.html
+++ b/html/estimate/estimateCal.html
@@ -13,7 +13,7 @@
         <div class="hd__inner1100">
         <div class="container">
             <div class="banner">
-                <h1>견적을 확인하고 싶은 업체를 선택해 주세요.</h1>
+                <p class="bold">견적을 확인하고 싶은 업체를 선택해 주세요.</p>
                 <p>스드메 견적을 간편하게 확인할 수 있어요</p>
             </div>
 
